feat: add preprocessing notebook - wrangled data into PySpark Rating object

--- a/notebooks/01-kar-data-wrangling-and-eda.ipynb
+++ b/notebooks/01-kar-data-wrangling-and-eda.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "***Problem Statement:***\n",
     "\n",
-    "_How can we accurately recommend new books to users using a user-item approach to encourage expanding user preferences to books they may not have otherwise found on their own?_\n"
+    "_How can we accurately recommend new books to users using an Item-item approach to encourage expanding user preferences to books they may not have otherwise found on their own?_\n"
    ]
   },
   {
@@ -391,9 +391,7 @@
     "\n",
     "This project will be taking the collaborative filtering approach. It is a technique that can filter out items that a user might like on the basis of reactions by similar users. It works by searching a large group of people and finding a smaller set of users with tastes similar to a particular user. To get recommendations, it looks at the items they like and combines them to create a ranked list of suggestions.\n",
     "\n",
-    "Descending one step further down, the collaborative filtering family has algorithms classified as either memory-based or model-based. The focus will be on a memory-based algorithm that uses item-item or item-based collaborative filtering.\n",
-    "\n",
-    "In sumamry, our approach is using an item-based collaborative filtering, that falls within the memory-based category of the larger family of collaborative filtering algorithms. This approach offers several advantages including scalability, accuracy and recommendations that are much easier to exaplin to users."
+    "In summary, our approach is using an item-based collaborative filtering algorithm, that falls within the memory-based category of the larger family of collaborative filtering algorithms. This approach offers several advantages including scalability, accuracy and recommendations that are much easier to exaplin to users."
    ]
   },
   {
