feat: trained baseline model on 10K subset of data

--- a/notebooks/02-kar-preprocessing-and-modeling.ipynb
+++ b/notebooks/02-kar-preprocessing-and-modeling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/11/18 19:53:01 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/11/19 09:48:54 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -70,7 +70,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x13c531610>"
+       "<pyspark.sql.session.SparkSession at 0x167a1e8d0>"
       ]
      },
      "execution_count": 2,
@@ -342,13 +342,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "[1713353, 'A1C6M8LCIX4M6M', 5.0, 1123804800]"
@@ -405,16 +398,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 10:>                                                        (0 + 6) / 16]\r"
+      "Java HotSpot(TM) 64-Bit Server VM warning: CodeCache is full. Compiler has been disabled.\n",
+      "Java HotSpot(TM) 64-Bit Server VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CodeCache: size=131072Kb used=21617Kb max_used=21630Kb free=109454Kb\n",
-      " bounds [0x000000010a9e0000, 0x000000010bf20000, 0x00000001129e0000]\n",
-      " total_blobs=8831 nmethods=7883 adapters=861\n",
+      "CodeCache: size=131072Kb used=22104Kb max_used=22106Kb free=108967Kb\n",
+      " bounds [0x00000001091e0000, 0x000000010a7a0000, 0x00000001111e0000]\n",
+      " total_blobs=8899 nmethods=7950 adapters=861\n",
       " compilation: disabled (not enough contiguous free space left)\n"
      ]
     },
@@ -422,8 +416,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Java HotSpot(TM) 64-Bit Server VM warning: CodeCache is full. Compiler has been disabled.\n",
-      "Java HotSpot(TM) 64-Bit Server VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=\n",
       "                                                                                \r"
      ]
     },
@@ -488,7 +480,10 @@
    "outputs": [],
    "source": [
     "# Transform to Mllib Rating object\n",
-    "ratings = books_rdd.map(lambda r: Row(userID=int(broadcasted_dict.value.get(r[1])), bookID=int(r[0]), rating=float(r[2]), timestamp=r[3]))"
+    "ratings = books_rdd.map(lambda r: Row(userID=int(broadcasted_dict.value.get(r[1])), \n",
+    "                                      bookID=int(r[0]), \n",
+    "                                      rating=float(r[2]), \n",
+    "                                      timestamp=r[3]))"
    ]
   },
   {
@@ -622,6 +617,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.dataframe.DataFrame"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(ratings_df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -630,19 +645,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get Fractions for 20M, 10M, 1M and 500K rows\n",
-    "frac_20M, frac_10M, frac_1M, frac_500K =[0.4477, 0.2238, 0.0224, 0.0112]\n",
+    "frac_20M, frac_10M, frac_1M, frac_500K, frac_10K = [0.4477, 0.2238, 0.0224, 0.0112, 0.0224]\n",
     "\n",
     "\n",
     "# Subset data \n",
-    "books_subset_500K = ratings_df.sample(fraction=frac_500K)\n",
-    "books_subset_1M = ratings_df.sample(fraction=frac_1M)\n",
-    "books_subset_10M = ratings_df.sample(fraction=frac_10M)\n",
-    "books_subset_20M = ratings_df.sample(fraction=frac_20M)"
+    "books_subset_10K = ratings_df.sample(withReplacement=False, fraction=frac_10K)\n",
+    "books_subset_500K = ratings_df.sample(withReplacement=False, fraction=frac_500K)\n",
+    "books_subset_1M = ratings_df.sample(withReplacement=False, fraction=frac_1M)\n",
+    "books_subset_10M = ratings_df.sample(withReplacement=False, fraction=frac_10M)\n",
+    "books_subset_20M = ratings_df.sample(withReplacement=False, fraction=frac_20M)"
    ]
   },
   {
@@ -654,11 +670,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, test = books_subset_500K.randomSplit([0.7, 0.3], seed=42)"
+    "train, test = books_subset_10K.randomSplit([0.7, 0.3], seed=42)"
    ]
   },
   {
@@ -677,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,47 +722,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Build a baseline model\n",
-    "# als = ALS(\n",
-    "#     maxIter=MAX_ITER,\n",
-    "#     rank=RANK,\n",
-    "#     regParam=REG_PARAM,\n",
-    "#     userCol=COL_USER,\n",
-    "#     itemCol=COL_ITEM,\n",
-    "#     ratingCol=COL_RATING,\n",
-    "#     coldStartStrategy=\"drop\"\n",
-    "# )\n",
-    "\n",
-    "# model = als.fit(train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/11/18 21:28:54 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n",
-      "23/11/18 21:28:54 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.lapack.JNILAPACK\n"
+      "23/11/19 11:02:48 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n",
+      "23/11/19 11:02:48 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.lapack.JNILAPACK\n",
+      "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "als = ALS(maxIter=5, regParam=0.01, userCol=\"userID\", itemCol=\"bookID\", ratingCol=\"rating\",\n",
-    "          coldStartStrategy=\"drop\")\n",
+    "# Build a baseline model with 10K rows only\n",
+    "als = ALS(\n",
+    "    maxIter=MAX_ITER,\n",
+    "    rank=RANK,\n",
+    "    regParam=REG_PARAM,\n",
+    "    userCol=COL_USER,\n",
+    "    itemCol=COL_ITEM,\n",
+    "    ratingCol=COL_RATING,\n",
+    "    coldStartStrategy=\"drop\"\n",
+    ")\n",
+    "\n",
     "model = als.fit(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -758,20 +764,20 @@
     }
    ],
    "source": [
-    "# Save the model \n",
-    "model.save('../models/model1')\n"
+    "# save model\n",
+    "model.save('../models/baseline')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prediction with the Model"
+    "### Model Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,17 +787,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict with model\n",
-    "preds = model.transform(test)"
+    "predictions = model.transform(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -805,19 +811,19 @@
    "source": [
     "# Evaluate the model\n",
     "evaluator = RegressionEvaluator(metricName=\"rmse\", labelCol=\"rating\", predictionCol=\"prediction\")\n",
-    "rmse = evaluator.evaluate(preds)"
+    "rmse = evaluator.evaluate(predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The root mean squared error for the model is: 4.876483832486571\n"
+      "The root mean squared error for the model is: 4.719012752097297\n"
      ]
     }
    ],
@@ -826,26 +832,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Evaluate the prediction results"
+    "# Evaluate the model on test data\n",
+    "# predicted_ratings = model.predictAll(test).map(lambda x: ((x[0], x[1]), x[2]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluations = SparkRatingEvaluation(\n",
-    "#     dfs_test,\n",
-    "#     dfs_pred,\n",
-    "#     col_user=COL_USER,\n",
-    "#     col_item=COL_ITEM,\n",
-    "#     col_rating=COL_RATING,\n",
-    "#     col_prediction=COL_PREDICTION\n",
-    "# )\n",
     "\n",
     "# print(\n",
     "#     \"RMSE score = {}\".format(evaluations.rmse()),\n",
@@ -857,43 +858,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Evaluate the model on test data\n",
-    "# predictions = model.predictAll(test).map(lambda x: ((x[0], x[1]), x[2] ))"
+    "Tuning Model Hyperparameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Build generic ALS Model\n",
-    "als = ALS(userCol=COL_USER, itemCol=COL_ITEM, ratingCol=COL_RATING,\n",
-    "          coldStartStrategy=\"drop\", nonnegative=True, implicitPrefs=False)"
+    "als2 = ALS(userCol=COL_USER, \n",
+    "          itemCol=COL_ITEM, \n",
+    "          ratingCol=COL_RATING,\n",
+    "          coldStartStrategy=\"drop\", \n",
+    "          nonnegative=True, \n",
+    "          implicitPrefs=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define hyperparams for CV\n",
     "param_grid = ParamGridBuilder()\\\n",
-    "             .addGrid(als.rank, [5, 20, 40, 80])\\\n",
-    "             .addGrid(als.maxIter, [5, 100, 250, 300])\\\n",
-    "             .addGrid(als.regParam, [0.05, 0.1, 1.5])\\\n",
+    "             .addGrid(als2.rank, [5, 20, 40, 80])\\\n",
+    "             .addGrid(als2.maxIter, [5, 100, 250, 300])\\\n",
+    "             .addGrid(als2.regParam, [0.05, 0.1, 1.5])\\\n",
     "             .build()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,30 +907,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Perform Cross-Validation for best hyperparams\n",
-    "cv = CrossValidator(estimator=als,\n",
+    "cv = CrossValidator(estimator=als2,\n",
     "                    estimatorParamMaps=param_grid,\n",
     "                    evaluator=evaluator,\n",
-    "                    numFolds=5)"
+    "                    numFolds=5, \n",
+    "                    parallelism=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run the cv on training data\n",
-    "# model = cv.fit(train)"
+    "model = cv.fit(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
