Feat: add project report and edited modeling notebook to remove unnecessary comments

--- a/notebooks/02-kar-preprocessing-and-modeling.ipynb
+++ b/notebooks/02-kar-preprocessing-and-modeling.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Recommendation System\n",
     "\n",
-    "1. Downsampled to about 32k rows (this was the limit for processing by `Surprise` algos)\n",
+    "1. Downsampled to about 32k rows using about 5k unique books(this was the limit for processing by `Surprise` algos)\n",
     "2. Trained several baseline models and evaluated using the MAE and RMSE metrics\n",
     "3. Performed GridSearch to find the best hyperparameters for the top 2 baseline models\n",
     "4. Chose best optimized model of the 2\n",
@@ -481,6 +481,27 @@
    "source": [
     "# Get a Random Sample of 5k books from list of unique books IDs\n",
     "book_ids_5k = book_ids.sample(withReplacement=False, fraction=0.0008, seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'book_ids_5k' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/kylerodriguez/Desktop/Springboard Data Science Track/amazon-recommender/notebooks/02-kar-preprocessing-and-modeling.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kylerodriguez/Desktop/Springboard%20Data%20Science%20Track/amazon-recommender/notebooks/02-kar-preprocessing-and-modeling.ipynb#Y145sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m book_ids_5k\u001b[39m.\u001b[39mcount()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'book_ids_5k' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "book_ids_5k.count()"
    ]
   },
   {
@@ -1158,42 +1179,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from collections import defaultdict\n",
-    "\n",
-    "\n",
-    "# def get_top_n(predictions, n=10):\n",
-    "#     \"\"\"Return the top-N recommendation for each user from a set of predictions.\n",
-    "\n",
-    "#     Args:\n",
-    "#         predictions(list of Prediction objects): The list of predictions, as\n",
-    "#             returned by the test method of an algorithm.\n",
-    "#         n(int): The number of recommendation to output for each user. Default\n",
-    "#             is 10.\n",
-    "\n",
-    "#     Returns:\n",
-    "#     A dict where keys are user (raw) ids and values are lists of tuples:\n",
-    "#         [(raw item id, rating estimation), ...] of size n.\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     # First map the predictions to each user.\n",
-    "#     top_n = defaultdict(list)\n",
-    "#     for uid, iid, true_r, est, _ in predictions:\n",
-    "#         top_n[uid].append((iid, est))\n",
-    "\n",
-    "#     # Then sort the predictions for each user and retrieve the k highest ones.\n",
-    "#     for uid, user_ratings in top_n.items():\n",
-    "#         user_ratings.sort(key=lambda x: x[1], reverse=True)\n",
-    "#         top_n[uid] = user_ratings[:n]\n",
-    "\n",
-    "#     return top_n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -1245,19 +1230,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from random import choice\n",
-    "\n",
-    "# def get_random_user(trainset=books_5k):\n",
-    "#     '''Gets a random user found in the trainset'''\n",
-    "#     return choice(list(trainset.userID))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
@@ -1282,31 +1254,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_recs_and_ratings() -> dict:\n",
-    "#     '''Get top-n predicted recommendations for a random user and returns a dictionary of book IDs and predicted ratings.'''\n",
-    "    \n",
-    "#     # Get Random User and their Recommendations and Ratings\n",
-    "#     rand_user = get_random_user()\n",
-    "#     recs = top_n[rand_user]\n",
-    "\n",
-    "#     # Wrangle their recommendations and ratings into a dict\n",
-    "#     bookID = [id[0] for id in recs]\n",
-    "#     rating = [rec[1] for rec in recs]\n",
-    "\n",
-    "#     pairs = {\n",
-    "#         'books': bookID,\n",
-    "#         'predicted_ratings': rating\n",
-    "#     }\n",
-    "\n",
-    "#     return pairs "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1328,97 +1275,6 @@
    ],
    "source": [
     "spark_df = spark.read.json('../data/books_meta.gz')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import re\n",
-    "\n",
-    "# def clean_text_list(text_list):\n",
-    "#     '''Helper function to cleanup string output of description column'''\n",
-    "#     # Filter out empty strings and HTML tags, then join the remaining text\n",
-    "#     cleaned_sentence = ' '.join(filter(lambda x: x.strip() != '', [re.sub(r'<.*?>', '', text).strip() for text in text_list]))\n",
-    "#     return cleaned_sentence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Define a function to check if a value resembles the specified pattern\n",
-    "# def replace_unavailable(value):\n",
-    "#     if isinstance(value, str) and any(pattern in value for pattern in [\n",
-    "#         r'a-section\\.a-spacing-mini',\n",
-    "#         r'#actionPanel #availability',\n",
-    "#         r'#actionPanel #merchant-info',\n",
-    "#         r'#actionPanel #pa_avaliability_message',\n",
-    "#         r'#actionPanel #availability-brief',\n",
-    "#         r'#actionPanel #bbop-sbbop-container',\n",
-    "#         r'#actionPanel .buybox-main',\n",
-    "#         r'#actionPanel #priceblock_ourprice_row span.feature img',\n",
-    "#         r'#actionPanel #pa_feedbackForm_rootmain',\n",
-    "#         r'#buybox_feature_div #deal #regularBuybox',\n",
-    "#         r'#hero-quick-promo hr',\n",
-    "#         r'#actionPanel #hqp',\n",
-    "#         r'#actionPanel #amsDetailRight',\n",
-    "#         r'#actionPanel #amsDetailRightWide',\n",
-    "#         r'#actionPanel #hqp #hqp-left',\n",
-    "#         r'div#hqp-bottom.a-section.burj',\n",
-    "#         r'#instantOrderUpdate_feature_div'\n",
-    "#     ]):\n",
-    "#         return 'Price not available'\n",
-    "#     else:\n",
-    "#         return value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def cleanup_cols(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "#     # Cleanup output of Description column\n",
-    "#     df['description'] = df['description'].apply(clean_text_list)\n",
-    "#     df['description'] = df.description.replace(\n",
-    "#         [''], ['No Description Available.'])\n",
-    "\n",
-    "#     # If price is missing, replace with 'No Price Available'\n",
-    "#     df['price'] = df.price.replace([''], ['Price Not Available.'])\n",
-    "#     df['price'] = df.price.apply(replace_unavailable)\n",
-    "\n",
-    "#     # Convert asin col to int dtype for merge late\n",
-    "#     df['asin'] = df['asin'].astype('int')\n",
-    "\n",
-    "#     return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_metadata(user_recs, metadata_file='../data/books_meta.gz') -> pd.DataFrame:\n",
-    "#     '''Get the metadata for provided recommended book IDS and return a cleanly formatted DF'''\n",
-    "\n",
-    "#     # Load the file containing the metadata\n",
-    "#     spark_df = spark.read.json(metadata_file)\n",
-    "\n",
-    "#     # Find the metadata for user recommendations\n",
-    "#     columns = ['asin', 'title', 'price', 'description']\n",
-    "#     recommendations = spark_df[spark_df.asin.isin(user_recs['books'])][*columns].toPandas()\n",
-    "\n",
-    "#     # Cleanup output of Column\n",
-    "#     cleaned_recommendations = cleanup_cols(recommendations)\n",
-    "\n",
-    "#     return cleaned_recommendations"
    ]
   },
   {
